
# call for instance as:
# ./bin/changelog statemine-v5.0.0
#
# You may set the ENV NO_CACHE to force fetching from Github
# You should also ensure you set the ENV: GITHUB_TOKEN

require_relative '../lib/changelog'
require 'logger'

logger = Logger.new($stdout)
logger.level = Logger::DEBUG
logger.debug('Starting')

owner = 'paritytech'
repo = 'cumulus'

ref1 = ARGV[0]
ref2 = ARGV[1] || 'HEAD'

ENV['REF1'] = ref1
ENV['REF2'] = ref2

gh_cumulus = SubRef.new(format('%<owner>s/%<repo>s', { owner: owner, repo: repo }))

polkadot_ref1 = gh_cumulus.get_dependency_reference(ref1, 'polkadot-client')
polkadot_ref2 = gh_cumulus.get_dependency_reference(ref2, 'polkadot-client')

substrate_ref1 = gh_cumulus.get_dependency_reference(ref1, 'sp-io')
substrate_ref2 = gh_cumulus.get_dependency_reference(ref2, 'sp-io')

logger.debug("Polkadot from:   #{polkadot_ref1}")
logger.debug("Polkadot to:     #{polkadot_ref2}")

logger.debug("Substrate from:  #{substrate_ref1}")
logger.debug("Substrate to:    #{substrate_ref2}")

cumulus_data = 'cumulus.json'
substrate_data = 'substrate.json'
polkadot_data = 'polkadot.json'

logger.debug("Using CUMULUS:   #{cumulus_data}")
logger.debug("Using SUBSTRATE: #{substrate_data}")
logger.debug("Using POLKADOT:  #{polkadot_data}")

logger.warn('NO_CACHE set') if ENV['NO_CACHE']

# This is acting as cache so we don't spend time querying while testing
if ENV['NO_CACHE'] || !File.file?(cumulus_data)
  logger.debug(format('Fetching data for Cumulus into %s', cumulus_data))
  cmd = format('changelogerator %<owner>s/%<repo>s -f %<from>s -t %<to>s > %<output>s',
               { owner: owner, repo: repo, from: ref1, to: ref2, output: cumulus_data })
  system(cmd)
else
  logger.debug("Re-using:#{cumulus_data}")
end

if ENV['NO_CACHE'] || !File.file?(polkadot_data)
  logger.debug(format('Fetching data for Polkadot into %s', polkadot_data))
  cmd = format('changelogerator %<owner>s/%<repo>s -f %<from>s -t %<to>s > %<output>s',