@@ -15,12 +15,12 @@
 <!-- branch : {{ runtime.data.branch }} -->
 <!-- pkg    : {{ runtime.data.pkg }} -->
 ```
-🏋️ Runtime Size:			{{ runtime.data.runtimes.compressed.subwasm.size | filesizeformat }} ({{ runtime.data.runtimes.compressed.subwasm.size }} bytes)
-🔥 Core Version:			statemine-600 (statemine-0.tx4.au1)
-🗜 Compressed:				{{ compressed }}: {{ comp_ratio | round(method="ceil", precision=2) }}%
+🏋️ Runtime Size:		{{ runtime.data.runtimes.compressed.subwasm.size | filesizeformat }} ({{ runtime.data.runtimes.compressed.subwasm.size }} bytes)
+🔥 Core Version:		statemine-600 (statemine-0.tx4.au1)
+🗜 Compressed:			{{ compressed }}: {{ comp_ratio | round(method="ceil", precision=2) }}%
 🗳️ system.setCode hash:		{{ runtime.data.runtimes.compressed.subwasm.proposal_hash }}
 🗳️ authorizeUpgrade hash:	{{ runtime.data.runtimes.compressed.subwasm.parachain_authorize_upgrade_hash }}
-#️⃣ Blake2-256 hash:			{{ runtime.data.runtimes.compressed.subwasm.blake2_256 }}
-📦 IPFS:					{{ runtime.data.runtimes.compressed.subwasm.ipfs_hash }}
+#️⃣ Blake2-256 hash:		{{ runtime.data.runtimes.compressed.subwasm.blake2_256 }}
+📦 IPFS:			{{ runtime.data.runtimes.compressed.subwasm.ipfs_hash }}
 ```
 {%- endmacro runtime %}
